--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4823,6 +4823,8 @@ Version:1.0
 }
 .footer .about .logo{
 	margin-bottom:20px;
+	width: 50%;
+	height: 50%;
 }
 .footer .about .logo img{}
 .footer .about .text{
