--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -365,8 +365,10 @@ Version:1.0
 	margin-right: 188px;
 }
 .header.shop .logo {
-	float: left;
-	margin-top: 35px;
+	/* float: left; */
+	/* margin-top: 20px; */
+	width: 100%;
+	height: 100%;
 }
 .header.shop .top-contact {
 	margin-top:0px;
@@ -624,7 +626,7 @@ Version:1.0
 }
 .header.shop .logo {
 	float: left;
-	margin: 19px 0 0;
+	margin: 10px 0 0;
 }
 .header.shop .top-contact {
 	margin-top:0px;
@@ -737,7 +739,7 @@ Version:1.0
 	top: 0;
 }
 .header.shop .middle-inner {
-	padding: 20px 0;
+	padding: 15px 0 20px;
 	background: #fff;
 	border-top: 1px solid #eee;
 }
@@ -4822,9 +4824,10 @@ Version:1.0
 	margin-bottom: 30px;
 }
 .footer .about .logo{
-	margin-bottom:20px;
-	width: 50%;
-	height: 50%;
+	margin-bottom: 60px;
+	/* margin-left: 50px; */
+	width: 40%;
+	height: 40%;
 }
 .footer .about .logo img{}
 .footer .about .text{
