perubahan pada penamaan

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4825,7 +4825,7 @@ Version:1.0
 }
 .footer .about .logo{
 	margin-bottom: 60px;
-	/* margin-left: 50px; */
+	margin-left: 100px;
 	width: 40%;
 	height: 40%;
 }
